@@ -1,7 +1,14 @@
 package tp2.bitdlp.smartcontract;
 
 import java.io.File;
+import java.io.FileInputStream;
+import java.io.InputStream;
+import java.util.LinkedList;
+import java.util.List;
 
+import jakarta.ws.rs.InternalServerErrorException;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.core.Response.Status;
 import tp2.bitdlp.pow.transaction.LedgerTransaction;
 import tp2.bitdlp.util.Utils;
 import tp2.bitdlp.util.result.Result;
@@ -11,6 +18,8 @@ import tp2.bitdlp.util.result.Result;
  */
 class Executor
 {
+    protected static final File SMART_CONTRACT_SECURITY_POLICY = new File("smart-contracts", "smart-contract.policy");
+
     /**
      * Execute a smart contract in an isolated environment.
      * @param className The class name.
@@ -20,8 +29,44 @@ class Executor
      */
     public static Result<Boolean> execute(String className, File classPath, String... params)
     {
-        // TODO:
-        return null;
+        List<String> args = new LinkedList<>();
+        args.add("java");
+        args.add("-Djava.security.manager");
+        args.add("-Djava.security.policy==" + SMART_CONTRACT_SECURITY_POLICY.getAbsolutePath());
+        args.add(className);
+        args.addAll(List.of(params));
+
+        File errorFile = new File(classPath, "error.txt");
+
+        ProcessBuilder pBuilder = new ProcessBuilder(args);
+        pBuilder.directory(classPath);
+        pBuilder.redirectError(errorFile);
+
+        try {
+            Process p = pBuilder.start();
+            String res = p.inputReader().readLine();
+
+            p.waitFor();
+
+            if (res != null && res.equalsIgnoreCase(Boolean.TRUE.toString()))
+                return Result.ok(true);
+            else if (res != null && res.equalsIgnoreCase(Boolean.FALSE.toString()))
+                return Result.ok(false);
+
+            // An error occurred.
+            if (!errorFile.isFile())
+                return Result.error(new WebApplicationException(
+                    "The smart contract execution encountered and error.", Status.CONFLICT));
+            
+            try (InputStream errorStream = new FileInputStream(errorFile))
+            {
+                return Result.error(new WebApplicationException(
+                    new String(errorStream.readAllBytes()), Status.CONFLICT));
+            }
+            
+        } catch (Exception e) {
+            return Result.error(new InternalServerErrorException(e.getMessage(), e));
+        }
     }
 
     /**
